Header fix not necessary after template merge, footer tabs realigned.

--- a/lms/static/sass/_pearsonx.scss
+++ b/lms/static/sass/_pearsonx.scss
@@ -6,10 +6,6 @@ h2 {
   background-color: $white;
 }
 
-.global_header .nav-links .main .nav-item a {
-  vertical-align: -4px;
-}
-
 .header-global {
   height: auto;
 }
@@ -146,6 +142,10 @@ h2 {
     }
     display: inline-block;
     margin: ($baseline/2) ($baseline/2)
+  }
+  .nav-colophon-01 {
+      vertical-align: bottom;
+      padding-bottom: 12px;
   }
 }
 
